--- a/Areas/Admin/Views/DotXetTuyens/CollegerIndex.cshtml
+++ b/Areas/Admin/Views/DotXetTuyens/CollegerIndex.cshtml
@@ -67,7 +67,7 @@
                                         {
                                             <div class="d-inline-flex flex-nowrap  align-items-center ">
                                                 <div class="form-check align-items-center">
-                                                    <input class="form-check-input" type="checkbox" id="ttxt_@item.Dxt_ID" name="ttxt_@item.Dxt_ID" onclick="SetupDotXetTuyenHienTai(@item.Dxt_ID, @item.Dxt_TrangThai_Xt, @item.Dxt_Classify)">
+                                                    <input class="form-check-input" type="checkbox" id="ttxt_@item.Dxt_ID" name="ttxt_@item.Dxt_ID" onclick="SetupDotXetTuyenHienTai(@item.Dxt_ID, @item.Dxt_TrangThai_Xt, 0)">
                                                     <label class="form-check-label" for="ttxt_@item.Dxt_ID">Đã khóa</label>
                                                 </div>
                                             </div>
@@ -161,7 +161,7 @@
         var idpresent = $('#ttxt_' + id_dotxt);
         $('#hiddenCode').text(id_dotxt);
         $('#hiddenTrangThai').text(trangthai);
-        $('#hiddenClassify').text(classify);
+        $('#hiddenClassify').text('0');
 
         if (idpresent.is(":checked")) {
             $('#txt_confirm').text("Bạn có chắc chắn muốn thiết lập đây là đợt tuyển sinh hiện tại?");
@@ -169,11 +169,10 @@
         $('#modal_thietlap_dothientai').modal('show');
     }
     function confirm_action() {
-        var _Dxt_ID = $('#hiddenCode').text();
-        var Dxt_Classify = $('#hiddenClassify').text();
+        var _Dxt_ID = $('#hiddenCode').text();        
         var data_change = {
             Dxt_ID: _Dxt_ID,
-            Dxt_Classify: Dxt_Classify
+            Dxt_Classify: 0
         }
         $.ajax({
             url: '/Admin/DotXetTuyens/DotXetTuyetChangeTTXTJson/',
