--- a/Views/Auth/Login.cshtml
+++ b/Views/Auth/Login.cshtml
@@ -231,12 +231,12 @@
                             <hr />
                             <div>
                                 <label class="small mb-1" for="login_CCCD">Căn cước công dân</label>
-                                <input name="login_CCCD" id="login_CCCD" class="form-control" placeholder="Nhập CCCD" value="1" />
+                                <input name="login_CCCD" id="login_CCCD" class="form-control" placeholder="Nhập CCCD"/>
                                 <span id="login_CCCD_Error" class="small mb-1 text-danger"></span>
                             </div>
                             <div class="mb-3">
                                 <label class="small mb-1" for="inputPassword">Mật khẩu</label>
-                                <input type="password" name="login_password" id="login_password" class="form-control" placeholder="Nhập mật khẩu" value="123456" />
+                                <input type="password" name="login_password" id="login_password" class="form-control" placeholder="Nhập mật khẩu"/>
                                 <span id="login_password_Error" class="small mb-1 text-danger"></span>
                             </div>
                             <center>
@@ -264,8 +264,8 @@
                             </div>
                             <hr class="mt-3 mb-2" />
                             <div class="text-center mt-2">
-                                <div class="small"><a id="showSignupColleger" style="text-decoration: none; color: #ff6a00; letter-spacing: -0.5px; " href="#">Đăng ký thông tin xét tuyển đại học <b>tại đây</b></a></div>
-                                <div class="small mt-1"><a id="showSignupMaster" style="text-decoration: none; color: #ff6a00; letter-spacing: -0.5px; " href="#">Đăng ký  thông tin tuyển sinh sau đại học <b>tại đây</b></a></div>
+                                <div class="small"><a id="showSignupColleger" style="text-decoration: none; color: #ff6a00; letter-spacing: -0.5px; cursor:pointer">Đăng ký thông tin xét tuyển đại học <b>tại đây</b></a></div>
+                                <div class="small mt-1"><a id="showSignupMaster" style="text-decoration: none; color: #ff6a00; letter-spacing: -0.5px; " cursor:pointer">Đăng ký  thông tin tuyển sinh sau đại học <b>tại đây</b></a></div>
                                 <div class="small mt-1"><a id="showForgotPassword" style="text-decoration: none; color: #ff6a00;" href="/Auth/ForgotPassword" >Quên mật khẩu? <b>Đặt lại mật khẩu</b></a></div>
                                  
                             </div>
