--- a/Views/Auth/Login.cshtml
+++ b/Views/Auth/Login.cshtml
@@ -265,7 +265,7 @@
                             <hr class="mt-3 mb-2" />
                             <div class="text-center mt-2">
                                 <div class="small"><a id="showSignupColleger" style="text-decoration: none; color: #ff6a00; letter-spacing: -0.5px; cursor:pointer">Đăng ký thông tin xét tuyển đại học <b>tại đây</b></a></div>
-                                <div class="small mt-1"><a id="showSignupMaster" style="text-decoration: none; color: #ff6a00; letter-spacing: -0.5px; " cursor:pointer">Đăng ký  thông tin tuyển sinh sau đại học <b>tại đây</b></a></div>
+                                <div class="small mt-1"><a id="showSignupMaster" style="text-decoration: none; color: #ff6a00; letter-spacing: -0.5px; cursor:pointer">Đăng ký  thông tin tuyển sinh sau đại học <b>tại đây</b></a></div>
                                 <div class="small mt-1"><a id="showForgotPassword" style="text-decoration: none; color: #ff6a00;" href="/Auth/ForgotPassword" >Quên mật khẩu? <b>Đặt lại mật khẩu</b></a></div>
                                  
                             </div>
