--- a/Views/DangKyXetTuyens/dkxtthptqg.cshtml
+++ b/Views/DangKyXetTuyens/dkxtthptqg.cshtml
@@ -397,8 +397,8 @@
                 </div>
                 <div class="row mb-3">
                     <div class="col-xxl-12" style="text-align:center">
-                        <input class="btn btn-outline-primary col-lg-1 col-sm-5" id="bt_ok_div_update_aspirations" type="button" value="Đồng ý thêm" />
-                        <input class="btn btn-outline-secondary col-lg-1 col-sm-4" id="bt_close_div_update_aspirations_second" type="button" value="Hủy bỏ" />
+                        <input class="btn btn-outline-primary" id="bt_ok_div_update_aspirations" type="button" value="Đồng ý thêm" />
+                        <input class="btn btn-outline-secondary" id="bt_close_div_update_aspirations_second" type="button" value="Hủy bỏ" />
                     </div>
                 </div>
             </div>
